# monty

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GITHUB_INTEGRATION.md  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  monty.sh  pyproject.toml  ruff.toml  setup.sh  start.sh
alembic/: env.py
alembic/versions/: 20240106_000000_enable_pgvector_extension.py  20240106_000001_add_technician_models.py
app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  snowflake.py
app/models/: __init__.py  base.py  prediction.py  region.py  technician.py  trained_model.py
app/routers/: __init__.py  agent.py  dashboard.py  models.py
app/schemas/: __init__.py  dashboard.py  models.py
app/services/: __init__.py  agent.py  agent_tools.py  appliance_tools.py  embeddings.py  recommendations.py  snowflake.py  tools.py
app/services/ml/: __init__.py  interpret_service.py  prophet_service.py
app/static/: index.html
docker/nginx/: nginx.conf
docker/postgres/: init.sql
models/prophet/jobs/: v20260107_163704.sav
models/prophet/jobs_ca/: v20260107_164838.sav  v20260107_164902.sav  v20260107_165059.sav  v20260107_165208.sav  v20260107_165403.sav  v20260107_172911.sav  v20260107_182015.sav  v20260107_200250.sav  v20260107_203657.sav  v20260108_171750.sav  v20260108_181959.sav  (+1 more)
scripts/: github-push.sh  monty.sh  prd.json  progress.txt  prompt.md
scripts/monty/: prd.json  progress.txt
tests/: test_agent.py  test_agent_router.py  test_agent_tools.py  test_appliance_tools.py  test_embedding_service.py  test_interpret_service.py  test_prophet_service.py  test_tools.py
tests/integration/: __init__.py  conftest.py  test_e2e_agent.py  test_e2e_dashboard.py  test_e2e_training.py
wizard/: index.html  requirements.txt  server.py
(+4 files in other folders)
